Added padding styles

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -40,6 +40,22 @@ a.unstyled {
     margin-top: 0.5em;
 }
 
+.padding-left-1 {
+    padding-left: 1em;
+}
+
+.padding-right-1 {
+    padding-right: 1em;
+}
+
+.padding-bottom-1 {
+    padding-bottom: 1em;
+}
+
+.padding-top-1 {
+    padding-top: 1em;
+}
+
 .btn.btn-no-click {
     cursor: default;
 }
