--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -60,6 +60,13 @@ a.unstyled {
     cursor: default;
 }
 
+.btn.btn-default.btn-inverse, .btn.btn-default.btn-inverse:active {
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    color: #000000;
+    box-shadow: none;
+}
+
 .cli .output {
     color: #228B22;
 }
